removed htmlmin from grunt build and changed long form content page css and js compressed filenames

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -38,7 +38,9 @@ body{
   font-family: $bodyFont;
   color: $bodyFontColor;
 }
-
+body.scroll{
+  overflow:hidden;
+}
 h1,h2,h3,h4,h5{
   margin: 0;
   padding: 0;
