--- a/app/styles/partials/_footer.scss
+++ b/app/styles/partials/_footer.scss
@@ -2,20 +2,21 @@ footer{
   .container-fluid{
     padding: 95px 0 0 0;
   }
-  background: $darkBG;
-  color: #FFF;
-  .link-group{
-    position:relative;
+  h2{
+    font-size: 1.5em;
   }
-  .link-group.last{
-    border-right: none;
-  }
-  .link-group-divider{
-    position:relative;
-    height: 150px;
-    border-left: 1px solid #FFF;
-    display:block;
-    margin-top: 20px;
+  background: #FFF;
+  color: #666;
+  .social{
+    h2{
+      margin-bottom: 20px;
+    }
+    a{
+      padding-right: 5px;
+    }
+    a:last-child{
+      padding-right: 0;
+    }
   }
   ul{
     margin: 20px 0 0 0;
@@ -23,27 +24,17 @@ footer{
 
     li{
       list-style-type: none;
-      font-size: 1.5em;
+      padding-bottom: 25px;
     }
   }
   a, a:hover{
-    color: white;
+    color: #010101;
+    font-size: 1.1667em;
   }
-  .bottom-links{
-    text-align:center;
+  .bottom-text{
+    text-align:left;
     margin-top: 75px;
-    padding-bottom: 35px;
-    ul{
-      margin: 0;
-      padding: 0;
-      list-style-type: none;
-      li{
-        display:inline-block;
-        padding-right: 35px;
-      }
-      li.last{
-        padding-right: 0;
-      }
-    }
+    margin-bottom: 35px;
+    font-size: 1.1667em;
   }
 }
