--- a/app/styles/partials/_menu.scss
+++ b/app/styles/partials/_menu.scss
@@ -318,19 +318,28 @@ header{
       max-width: 100%;
     }
     li{
-      .icn-menu, .icn-search, .icn-cart{
+      /*.icn-menu,*/ .icn-search, .icn-cart{
         background-repeat: no-repeat;
         background-size: 50% auto;
         background-position: right;
       }
-      .icn-menu{
+      /*.icn-menu{
         background-image: url('../images/sprite-mobile/icn-menu2x.png');
-      }
+      }*/
       .icn-search{
         background-image: url('../images/sprite-mobile/icn-search2x.png');
       }
       .icn-cart{
         background-image: url('../images/sprite-mobile/icn-cart2x.png');
+      }
+    }
+    .icn-menu{
+      right: 5%;
+      .patty{
+        float:right;
+        &:before, &:after{
+          float:right;
+        }
       }
     }
   }
