--- a/app/styles/partials/utils/_hero.scss
+++ b/app/styles/partials/utils/_hero.scss
@@ -45,3 +45,31 @@ $grid-gutter-width:1.5625%;
     }
   }
 }
+
+.long-form-content{
+  text-align:center;
+
+  .hero{
+    padding:150px 0;
+  }
+  .main-content{
+    .hero-wrapper{
+      background-image: url('../images/long-form-content/hero/content-peugeot-citroen.jpg');
+      .headline{
+        padding:0; // moved to hero
+        h1{
+          margin-bottom:30px;
+        }
+      }
+    }
+  }
+
+}
+
+.long-form-content.barbican{
+  .main-content{
+    .hero-wrapper{
+      background-image: url('../images/long-form-content/hero/barbican.jpg');
+    }
+  }
+}
