changed open menu styles ( not fixed to top anymore), fixed template issue on category page

--- a/app/styles/partials/category/_category-modules.scss
+++ b/app/styles/partials/category/_category-modules.scss
@@ -224,7 +224,7 @@ $catLink: #12b1c9;
   background: white;
   background-size: cover;
   background-repeat:no-repeat;
-  .type-cat{
+  .type-cat.col-xs-12{
     padding-left: 20px;
   }
   > .col-xs-12{
