--- a/app/styles/partials/_menu.scss
+++ b/app/styles/partials/_menu.scss
@@ -146,6 +146,21 @@ header{
     }
   }
 }
+body.scroll.open{
+  background: #12b1c9;
+  overflow-y: scroll;
+  #home-area, footer, .main-content{
+    display:none;
+  }
+  header{
+    position: relative;
+    background: #12b1c9;
+  }
+  .menu-overlay{
+    display:block;
+    height: auto;
+  }
+}
 .headroom{
   transition: transform 200ms linear;
 }
@@ -158,11 +173,12 @@ header{
 .search-overlay,
 .menu-overlay{
   display:none;
-  position:fixed;
+  //position:fixed;
+  position:relative;
   top: 0;
   width: 100%;
   min-height: 100%;
-  overflow-y:scroll;
+  //overflow-y:scroll;
   background-color: $menuBgColor;
   color: $menuFontColor;
   box-sizing: border-box;
@@ -349,10 +365,7 @@ header{
   }
   .search-overlay,
   .menu-overlay{
-    min-height: 100%;
-    height: 100%;
-    position:fixed;
-    overflow-y: scroll;
+    overflow-y: auto;
     .fixed-top{
       position:fixed;
       top: 0;
@@ -381,7 +394,8 @@ header{
     }
     .table{
       display:block;
-      margin-top:100px;
+      margin-top:0px;
+      padding-top: 20px;
       .vertical-wrap{
         display: block;
       }
