--- a/app/styles/ie8.scss
+++ b/app/styles/ie8.scss
@@ -1,4 +1,4 @@
-.lt-ie9{
+.no-backgroundsize{
   .main-content .hero-wrapper,
   .col1-halfbg.example1 .col-sm-6.bg,
   .col1-halfbg.example2 .col-sm-6.bg,
@@ -9,3 +9,16 @@
     background-position:center;
   }
 }
+
+
+/*
+no-touch
+no-rgba
+no-backgroundsize
+no-cssanimations
+no-cssgradients
+no-csstransitions
+cookies
+no-overflowscrolling
+no-ie8compat
+*/
