--- a/app/styles/partials/_footer.scss
+++ b/app/styles/partials/_footer.scss
@@ -42,6 +42,7 @@ footer{
 
 @media screen and (max-width: 767px){
   footer{
+    position:relative;
     .container-fluid{
       padding: 0 0 0 0;
     }
