--- a/app/styles/partials/_menu.scss
+++ b/app/styles/partials/_menu.scss
@@ -428,6 +428,8 @@ body.scroll.open{
       }*/
       .icn-search{
         background-image: url('../images/sprite-mobile/icn-search2x.png');
+        background-size: 19px 18px;
+        background-position: right center;
       }
       .icn-cart{
         background-image: url('../images/sprite-mobile/icn-cart2x.png');
