--- a/app/styles/partials/_menu.scss
+++ b/app/styles/partials/_menu.scss
@@ -108,7 +108,7 @@ header, .open header.lightHeader{
     }
 
   }
-  .cat-title{
+  .product-cat-title{
     color: #FFF;
     font-size: 1.2em;
     margin-left: 20px;
@@ -152,7 +152,7 @@ header, .open header.lightHeader{
 }
 
 .lightHeader{
-  .cat-title{
+  .product-cat-title{
     color: #000;
   }
   .logo{
