--- a/app/styles/partials/utils/_hero.scss
+++ b/app/styles/partials/utils/_hero.scss
@@ -13,31 +13,6 @@ $grid-gutter-width:1.5625%;
     background-size: cover;
     position:relative;
 
-    .type-cat.border{
-      a{
-        padding-right: 20px;
-        border-right: 1px solid $catHeaderDark;
-        margin-right: 20px;
-      }
-      a.last{
-        border-right: none;
-      }
-    }
-    .type-cat.white{
-      a{
-        color: white;
-        border-right: 1px solid #FFF;
-      }
-      a.last{
-        border-right: none;
-      }
-    }
-    .type-cat.pos{
-      position:absolute;
-      top:70px;
-      margin-left:$grid-gutter-width;
-    }
-
     .headline{
       text-align:center;
       padding-top: 150px;
@@ -51,6 +26,7 @@ $grid-gutter-width:1.5625%;
 
   .hero{
     padding:150px 0;
+    position:relative;
   }
   .main-content{
     .hero-wrapper{
