--- a/app/styles/content.scss
+++ b/app/styles/content.scss
@@ -1,5 +1,3 @@
-@import 'partials/utils/_hero.scss';
-
 $mediumGray: #888888;
 $lightGray: #cccccc;
 
@@ -9,116 +7,9 @@ $darkLinks:#000;
 .long-form-content{
   text-align:center;
 
-  .social-container{
-    list-style:none;
-    text-align:center;
-    text-transform:uppercase;
-    margin-top:35px;
-    color:#000;
-
-    .share-copy{
-      text-align:center;
-      font-size:2em;
-      line-height:1em;
-      margin-bottom:.5em;
-      +ul{
-        text-align:center;
-      }
-    }
-    li{
-      display:inline-block;
-      padding:10px 0;
-
-      a{
-        display:inline-block;
-        width:26px;
-        height:26px;
-        background-repeat:no-repeat;
-      }
-
-      + li {
-        margin-left:5px;
-      }
-      &.border-left{
-        border-left:1px solid #000;
-        padding-left:10px;
-        margin-left:10px;
-      }
-      &.facebook{
-        a {
-          background-image: url('../images/sprite/icon-facebook-dark.png');
-        }
-      }
-      &.twitter{
-        a {
-          background-image: url('../images/sprite/icon-twitter-dark.png');
-        }
-      }
-      &.linkedin{
-        a {
-          background-image: url('../images/sprite/icon-linkedin-dark.png');
-        }
-      }
-      &.email{
-        a {
-          background-image: url('../images/sprite/icon-email-dark.png');
-        }
-      }
-      &.download{
-        a {
-          background-image: url('../images/sprite/icon-download-dark.png');
-        }
-      }
-    }
-
-    &.light{
-      li{
-        &.border-left{
-          border-color:#FFF;
-        }
-        &.facebook{
-          a {
-            background-image: url('../images/sprite/icon-facebook-light.png');
-          }
-        }
-        &.twitter{
-          a {
-            background-image: url('../images/sprite/icon-twitter-light.png');
-          }
-        }
-        &.linkedin{
-          a {
-            background-image: url('../images/sprite/icon-linkedin-light.png');
-          }
-        }
-        &.email{
-          a {
-            background-image: url('../images/sprite/icon-email-light.png');
-          }
-        }
-        &.download{
-          a {
-            background-image: url('../images/sprite/icon-download-light.png');
-          }
-        }
-      }
-    }
-  }
-
-  .title-bg-detail{
+  .copy-section-title{
     margin-bottom:40px;
-    /*background-image: url('../images/title-bg-detail.jpg');
-    background-repeat:repeat-x;
-    background-position:center center;*/
-
-    h2{
-      display:inline-block;
-      margin-left:auto;
-      margin-right:auto;
-      padding:0 30px;
-      font-size:4em;
-      background:#FFFFFF;
-    }
+    font-size:4em;
   }
 
   p{
@@ -145,28 +36,41 @@ $darkLinks:#000;
     margin-bottom:80px;
   }
 
-  .top-benefits,
   .tech-used,
   .copy-section,
   .more-section{
     padding:50px 0;
   }
 
+  .summary,
+  .top-benefits{
+    padding:37px 0;
+  }
+  .summary{
+    padding-top:75px;
+    p {
+      font-size:2em;
+    }
+  }
+
   // used for modules with View All buttons
-  .content-overflows{
+  .tech-used{
     margin-bottom:50px;
     padding-bottom:0;
     padding-top:0;
     .border{
-      padding-top:50px;
+      padding-top:0;
       padding-bottom:80px; /* to accomodate View All */
       border:1px solid $lightGray;
     }
-    .title-bg-detail{
+    .copy-section-title{
+      display:inline-block;
+      margin-left:auto;
+      margin-right:auto;
       margin-top:-66px;
-      h2{
-        font-size:2em;
-      }
+      padding:0 30px;
+      font-size:2em;
+      background:#FFF;
     }
   }
 
@@ -219,7 +123,6 @@ $darkLinks:#000;
       font-size:2em;
     }
     .benefit{
-      margin-top:70px;
 
       p{
         max-width:170px;
@@ -249,27 +152,8 @@ $darkLinks:#000;
   .more-section{
     background:#f7f7f7;
 
-    .title-bg-detail{
-      background:none;
-      h2{
-        background:none;
-      }
-    }
-
     .more-content{
       text-align:left;
-      a{
-        display:inline-block;
-        font-size:1.167em;
-        text-transform:uppercase;
-        padding:10px 0;
-        color:$mediumGray;
-        + a{
-            border-left:1px solid $mediumGray;
-            padding-left:10px;
-            margin-left:10px;
-        }
-      }
       p{
         font-size:1.833em;
         margin-top:.5em;
@@ -297,12 +181,17 @@ $darkLinks:#000;
 
     .benefit{
       float:none;
-      margin:50px auto;
+      margin:0 auto 50px;
+      
+      + benefit{
+        margin:50px auto;
+      }
       p{
         max-width:100%;
       }
     }
 
+    .summary,
     .top-benefits,
     .tech-used,
     .copy-section,
@@ -311,7 +200,7 @@ $darkLinks:#000;
     }
 
     // used for modules with View All buttons
-    .content-overflows{
+    .tech-used{
       margin-bottom:25px;
       padding-bottom:0;
       padding-top:0;
@@ -319,22 +208,18 @@ $darkLinks:#000;
         padding-top:25px;
         padding-bottom:55px;
       }
-      .title-bg-detail{
+      .copy-section-title{
         margin-top:-41px;
-        h2{
-          font-size:3.125em;
-        }
+        font-size:3.125em;
       }
     }
     .view-all{
       margin-top:17px;
     }
 
-    .title-bg-detail{
-      h2{
-        font-size:3.125em;
-        padding:0 10px
-      }
+    .copy-section-title{
+      font-size:3.125em;
+      /*padding:0 10px*/
     }
     .quote{
       margin-bottom:45px;
